[workspace]
resolver = "2"

members = [ "devstats-cli",
    "devstats-core",
]

[workspace.package]
version = "0.1.0"
authors = ["Łukasz Gryglicki <lgryglicki@cncf.io>", "Justyna Gryglicka <jgryglicka@cncf.io>", "Josh Berkus <jberkus@redhat.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cncf/devstatscode"
description = "DevStats - GitHub analytics and metrics for CNCF projects"

[workspace.dependencies]
# Core dependencies that will be shared across workspace members
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
url = "2.0"
base64 = "0.22"
rand = "0.8"
num_cpus = "1.16"
warp = "0.3"
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
